# apl

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
src/agent/: escalate.rs  fs.rs  log.rs  mem.rs  net.rs  proc.rs  sys.rs
src/core/: config.rs  parser.rs  result.rs  server.rs
src/session/: extended.rs  mod.rs
